--- a/login.html
+++ b/login.html
@@ -71,7 +71,8 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">E-Mail:</span>
                       </div>
-                      <input type="email" class="form-control" placeholder="yourname@example.com" aria-label="E-Mail" aria-describedby="basic-addon1">
+                      <!--<input type="email" class="form-control" placeholder="yourname@example.com" aria-label="E-Mail" aria-describedby="basic-addon1">-->
+                      <input type="email" class="form-control" name="email" value="teacher@test.com" aria-label="E-Mail" aria-describedby="basic-addon1">
                     </div>
                 <!--<column class="float-left"><label for="mail">E-Mail:</label></column>
                 <input type="text" id="mail" name="mail" value= "testuser" required class="float-right"><br><br>-->
@@ -81,7 +82,7 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">Password:</span>
                       </div>
-                      <input type="password" id="password" name ="pwd" value="nlkj" class="form-control" placeholder="A Strong Password" aria-label="Password" aria-describedby="basic-addon1">
+                      <input type="password" id="password" name ="pwd" value="test" class="form-control" placeholder="A Strong Password" aria-label="Password" aria-describedby="basic-addon1">
                     </div>
                   <!--<column class="float-left"><label for="password">Password:</label></column>
                   <input type="password"  id="password" name="pwd" value= "nlkj" required class="float-right"><br><br>-->
