--- a/rating.html
+++ b/rating.html
@@ -56,49 +56,28 @@
     </div>
   </nav>
 
-  <!-- Login -->
+  <!-- Rating -->
 
 
   <header class="masthead">
       <div class="container h-100 d-flex justify-content-center align-items-center text-center">
         <div class="card bg-secondary">
           <div class="card-body">
-            <h2 class="card-title">Login</h2>
+            <h2 class="card-title">Rating of _FIRSTNAME_LASTNAME_</h2>
             <div class="container">
-              <form action="login_check.php" method="post">
-              <row>
-                  <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon1">E-Mail:</span>
-                      </div>
-                      <!--<input type="email" class="form-control" placeholder="yourname@example.com" aria-label="E-Mail" aria-describedby="basic-addon1">-->
-                      <input type="email" class="form-control" name="email" value="teacher@test.com" aria-label="E-Mail" aria-describedby="basic-addon1">
-                    </div>
-                <!--<column class="float-left"><label for="mail">E-Mail:</label></column>
-                <input type="text" id="mail" name="mail" value= "testuser" required class="float-right"><br><br>-->
-              </row>
-              <row>
-                  <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon1">Password:</span>
-                      </div>
-                      <input type="password" id="password" name ="pwd" value="test" class="form-control" placeholder="A Strong Password" aria-label="Password" aria-describedby="basic-addon1">
-                    </div>
-                  <!--<column class="float-left"><label for="password">Password:</label></column>
-                  <input type="password"  id="password" name="pwd" value= "nlkj" required class="float-right"><br><br>-->
-              </row>
-                <div>
-                <button class="btn btn-success" type="submit" name="submit" value="Login">Login</button>
+                <div class="row">
                 </div>
-              </form>
-              <br>
-              <div>
-              <button class="btn btn-success">Create new Account for Teachers</button>
-              </div>
-          <br>              
+
+            </div>
+         </div>   
+                
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
+
+
+
+
 
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
