--- a/teacher.html
+++ b/teacher.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Grayscale - Start Bootstrap Theme</title>
+  <title>Rate Presentations</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -125,7 +125,7 @@
                 <input type="text" class="form-control" id="groupname" placeholder="Your Group!">
             </div>
         </form>
-    </script>        
+    </script>
   
   </body>
   
