login sicher gemacht es fehle aber noch ein paar sachen

--- a/teacher.html
+++ b/teacher.html
@@ -47,7 +47,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html">Help Us</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="login.html">Login</a>
+              <a class="nav-link" href="login.php">Login</a>
           </li>
           <li class="nav-item">
                 <a class="nav-link"><i class="fas fa-user-circle" href=""></i></a>
