--- a/teacher.html
+++ b/teacher.html
@@ -83,6 +83,50 @@
         </div>
     </header>
 
+    <div class="container justify-content-center align-items-center text-center" style="margin-top: 50px; margin-bottom: 50px;">
+      <div id="createRating">
+        <div class="d-flex justify-content-center align-items-center text-center" style="margin-bottom: 50px;">
+          <button class="btn btn-success badge-pill" @click="addRange" style="margin-right: 20px;">Add Range Slider</button>
+          <button class="btn btn-success badge-pill" @click="addText" style="margin-left: 20px;">Add Text Feedback</button>
+        </div>
+        <div class="row" style="margin-bottom: 50px;">
+          <div class="col-md-4">
+            <strong>Question</strong>
+          </div>
+          <div class="col-md-6">
+            <strong>Answer</strong>
+          </div>
+          <div class="col-md-2">
+            <strong>Remove</strong>
+          </div>
+        </div>
+
+        <div class="row" style="margin-bottom: 15px;" v-for="(row, index) in ranges">
+          <div class="col-sm-12 col-md-4" style="margin-bottom: 15px;">
+            <textarea class="form-control" rows="1" v-model="row.question" placeholder="Enter your Question!"></textarea>
+          </div>
+          <div class="col-sm-12 col-md-6" style="margin-bottom: 15px;">
+            <input type="range" class="custom-range" min="1" max="10" step="1" v-model="row.slider">
+          </div>
+          <div class="col-sm-12 col-md-2"> 
+            <button class="btn btn-success badge-pill" v-on:click="removeRange(index)">Remove</button>
+          </div>
+        </div>
+
+        <div class="row" style="margin-bottom: 15px;" v-for="(row, index) in texts">
+          <div class="col-sm-12 col-md-4" style="margin-bottom: 15px;">
+            <textarea class="form-control" rows="1" v-model="row.feedback" placeholder="Enter your Question!"></textarea>
+          </div>
+          <div class="col-sm-12 col-md-6" style="margin-bottom: 15px;">
+            <textarea class="form-control" rows="3" v-model="row.text"></textarea>
+          </div>
+          <div class="col-sm-12 col-md-2"> 
+            <button class="btn btn-success badge-pill" v-on:click="removeText(index)">Remove</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
         <div class="container">
